# nichess-cpp

./: .gitignore  CMakeLists.txt  README.md
include/nichess/: constants.hpp  nichess.hpp  util.hpp
src/: nichess.cpp  util.cpp
test/: CMakeLists.txt  README.md  legalactionstest.cpp  othertest.cpp  undoactionstest.cpp
